--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,14 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".HomeFragment">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context="com.tosed.forcalculate.home.HomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:background="@color/azul_claro_home">
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/iv_home"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/height_max_image"
+            android:src="@drawable/image_home"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.244"
+            android:contentDescription="@null" />
+
+        <TextView
+            android:layout_margin="@dimen/margin_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/iv_home"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:text="Ei ! \nQue tal medir o IMC ? \n\nO IMC (índice de massa corporal) é uma medida internacional usada para calcular se uma pessoa está no peso ideal."
+            tools:ignore="HardcodedText" />
+
+
+        <Button
+            android:id="@+id/btn_start"
+            style="@style/btn_style"
+            android:layout_marginTop="100dp"
+            android:text="@string/btn_home_start"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_home"
+            app:layout_constraintVertical_bias="0.662" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
