--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ResultFragment">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical"
+        android:background="@color/white"
+        tools:ignore="UseCompoundDrawables">
 
-</FrameLayout>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_max_image"
+            android:src="@drawable/running_image"
+            android:contentDescription="@null" />
+
+        <TextView
+            android:id="@+id/tvResultado_peso"
+            android:padding="10dp"
+            style="@style/style_text_resultado" />
+
+        <TextView
+            android:id="@+id/tvRank"
+            style="@style/style_text_resultado"
+            android:padding="10dp" />
+    </LinearLayout>
+</layout>
