--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,8 @@
     <color name="prussian_blue">#032B43</color>
     <color name="green_blue">#3F88C5</color>
     <color name="yellow">#FFBA08</color>
+    <color name="btn_home_start">#283142</color>
+    <color name="azul_claro_home">#98d5e9</color>
+    <color name="red">#B20000</color>
+    <color name="bartools">#E83151</color>
 </resources>
