--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,12 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="inputStyle">
-        <item name="android:layout_width">0dp</item>
+
+    <style name="btn_style">
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:background">@color/pine_green</item>
-        <item name="android:ems">10</item>
-        <item name="android:inputType">textPersonName</item>
         <item name="android:padding">10dp</item>
-        <item name="android:textColorHint">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:backgroundTint">@color/btn_home_start</item>
+    </style>
+
+    <style name="style_text_resultado">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_margin">@dimen/margin_horizontal</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="inputStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">#ccc</item>
+        <item name="android:layout_margin">@dimen/margin_horizontal</item>
+        <item name="android:autofillHints">@null</item>
+        <item name="android:inputType">numberDecimal</item>
     </style>
 </resources>
