--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -2,6 +2,12 @@
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+        <variable
+            name="resultViewModel"
+            type="com.tosed.forcalculate.sharedView.SharedViewModel" />
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -18,11 +24,13 @@
         <TextView
             android:id="@+id/tvResultado_peso"
             android:padding="10dp"
+            android:text="@{@string/text_imc(resultViewModel.rounded)}"
             style="@style/style_text_resultado" />
 
         <TextView
             android:id="@+id/tvRank"
             style="@style/style_text_resultado"
+            android:text="@{@string/text_class(resultViewModel.ranking)}"
             android:padding="10dp" />
     </LinearLayout>
 </layout>
